--- a/examples/Demo/infra-config.json
+++ b/examples/Demo/infra-config.json
@@ -1,6 +1,6 @@
 ﻿{
   "OpenTelemetrySink": {
-    "Url": "http://localhost:18889",
-    "ExportProtocol": "Grpc" // Grpc, HttpProtobuf
+    "Endpoint": "http://localhost:18889",
+    "Protocol": "Grpc" // Grpc, HttpProtobuf
   }
 }
