--- a/examples/Demo/docker-compose.yaml
+++ b/examples/Demo/docker-compose.yaml
@@ -1,5 +1,4 @@
-﻿
-name: open-telemetry-example
+﻿name: open-telemetry-example
 
 services:
 
@@ -7,7 +6,7 @@ services:
         image: mcr.microsoft.com/dotnet/aspire-dashboard:latest
         ports:
             - "18888:18888"
-            - "18889:18889" 
+            - "18889:18889"
         volumes:
             - aspire-data:/aspire
  
