--- a/src/NBomber.Sinks.OpenTelemetry/NBomber.Sinks.OpenTelemetry.csproj
+++ b/src/NBomber.Sinks.OpenTelemetry/NBomber.Sinks.OpenTelemetry.csproj
@@ -20,6 +20,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="../../LICENSE" Pack="true" Visible="false" PackagePath="" />
+    <None Include="../../assets/nbomber_icon.png" Pack="true" Visible="false" PackagePath="" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="NBomber.Contracts" Version="6.1.0" />
     <PackageReference Include="OpenTelemetry" Version="1.13.1" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.13.1" />
