--- a/src/NBomber.Sinks.OpenTelemetry/NBomber.Sinks.OpenTelemetry.csproj
+++ b/src/NBomber.Sinks.OpenTelemetry/NBomber.Sinks.OpenTelemetry.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>    
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
-    <Version>0.1.0-beta.0</Version>
+    <Version>0.1.0</Version>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Company>NBomber</Company>
